--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <a href="mailto:doerlbh@gmail.com">doerlbh@gmail.com</a>
           </div>
           <p class="mb-5 text-primary">
-            I am a Ph.D. candidate at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> in Columbia University, co-advised by <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Nikolaus Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>. I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences.  </p>
+            I am a Ph.D. candidate at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> in Columbia University, co-advised by <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Nikolaus Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>. I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences. Most recently, I am developing neuroscience-inspired AI systems and applying ML to understand human brains (Neuro <-> AI).   </p>
 
             <p class="mb-5 text-primary">I graduated from the University of Washington, Seattle (UW), as part of the NIH-funded Computational Neuroscience Training Program, with B.S. in Applied & Computational Mathematics and B.A. in Psychology with Honors. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>. 
             </p>
@@ -158,7 +158,7 @@
 
         <p class="mb-5 text-primary">
 
-        I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, genome sciences, protein design, artificial intelligence, computational psychiatry and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research.  </p>
+        I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, artificial intelligence, reinforcement learning, genome sciences, protein design, computational psychiatry, and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research.  </p>
 
         <p class="mb-5 text-primary">
           Research by areas: <span style="color: blue;"> neuroscience (NS)</span>, <span style="color: red;">machine learning (ML)</span>, <span style="color: chocolate;"> computer vision (CV)</span>, <span style="color: purple;"> geometric topology (GT)</span>, <span style="color: forestgreen;"> systems biology (SB)</span>, <span style="color: teal;"> applied mathematics (AM)</span>, <span style="color: brown;"> human-computer interaction (HCI)</span>, <span style="color: orange;"> Bayesian statistics (BS)</span>, <span style="color: salmon;"> translational medicine (TM) </span>.
@@ -171,13 +171,13 @@
             
             <tr><td>2017</td><td>now</td><td>IBM Research HQ</td><td>CompNeuro & AI Foundations Groups</td><td><a href="#p7">[7]</a><a href="#p8">[8]</a><a href="#p11">[11]</a><a href="#p15">[15]</a><a href="#p18">[18]</a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: salmon;">TM</span> </td></tr>
 
-            <tr><td>2017</td><td>2017</td><td>Microsoft Research HQ</td><td>EPIC Group</td><td><a href="#p16">[16]</a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span>,<span style="color: brown;">HCI</span></td></tr>
+            <tr><td>2017</td><td>2017</td><td>Microsoft Research HQ</td><td>EPIC Group</td><td><a href="#p19">[19]</a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span>,<span style="color: brown;">HCI</span></td></tr>
 
-            <tr><td>2018</td><td>now</td><td>Columbia University</td><td> Visual Inference Group, Kriegeskorte Lab </td><td><a href="#p9">[9]</a><a href="#p14">[14]</a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span> </td></tr>
+            <tr><td>2018</td><td>now</td><td>Columbia University</td><td> Visual Inference Group, Kriegeskorte Lab </td><td><a href="#p9">[9]</a><a href="#p14">[14]</a><a href="#p17">[17]</a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span> </td></tr>
 
             <tr><td>2018</td><td>now</td><td> </td><td> NeuroTheory Center, Qian Lab </td><td><a href="#p10">[10]</a><a href="#p12">[12]</a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td></tr>
 
-            <tr><td>2018</td><td>2018</td><td> </td><td> Dept. of Systems Biol., Rabadan Lab </td><td><a href="#p13">[13]</a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: purple;">GT</span> </td></tr>
+            <tr><td>2018</td><td>2018</td><td> </td><td> Dept. of Systems Biol., Rabadan Lab </td><td><a href="#p13">[13]</a><a href="#p17">[17]</a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: purple;">GT</span> </td></tr>
 
             <tr><td>2017</td><td>2017</td><td> </td><td> Dept. of CS, Pe’er Lab </td><td><a href="#p6">[6]</a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: salmon;">TM</span> </td></tr>
 
@@ -187,7 +187,7 @@
 
             <tr><td>2016</td><td>2016</td><td></td><td> Dept. of Applied Math, Qian Lab </td><td></td><td><span style="color: teal;">AM</span>,<span style="color: forestgreen;">SB</span></td></tr>
 
-            <tr><td>2014</td><td>2016</td><td></td><td> Vision Neuroscience Group, Olavarria Lab </td><td><a href="#p2">[2]<a><a href="#p17">[17]</a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span> </td></tr>
+            <tr><td>2014</td><td>2016</td><td></td><td> Vision Neuroscience Group, Olavarria Lab </td><td><a href="#p2">[2]<a><a href="#p16">[16]</a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span> </td></tr>
 
             <tr><td>2014</td><td>2017</td><td>BIME </td><td> State Key Lab of Pathogen & Biosecurity </td><td><a href="#p1">[1]</a><a href="#p3">[3]<a><a href="#p4">[4]</a><a href="#p5">[5]</a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: teal;">AM</span>,<span style="color: salmon;">TM</span></td></tr>
 
@@ -277,34 +277,14 @@
 
           <h2 class="mb-5">Publications</h2>
           
-          <p class="mb-5 text-primary"> <b>18</b> total = <b>8</b> conferences + <b>5</b> journals + <b>5</b> under review / arXiv preprints &nbsp; </p>
+          <p class="mb-5 text-primary"> <b>19</b> total = <b>10</b> conferences + <b>6</b> journals + <b>3</b> under review / arXiv preprints &nbsp; </p>
 
           <h3> ongoing...</h3> <br />
           <ul class="fa-ul mb-0">
 
-            <li>        
-              <!-- <i class="fa-li fa fa-conference"></i> -->
-              [18]&nbsp; <b class="text-primary" id="p18"> under review. &nbsp; </b><br />
-              <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish. <br />
-              <p style="color:black"> Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders. </p>
-              [<a href="https://arxiv.org/abs/1906.11286" style="color:#3498db">arXiv</a>]&nbsp;
-              [<a href="./bibTex/lin2019reinforce.txt"  style="color:#3498db">bibTex</a>]&nbsp;
-              <!-- [<a href="https://app.box.com/s/ttijx4zrpvkxhtdm5cwei3a7ccav4w4v"  style="color:#3498db">code</a>]&nbsp; -->
-            </li>  <br />
-
             <li>
               <!-- <i class="fa-li fa fa-journal"></i> -->
-              [17]&nbsp;  <b class="text-primary" id="p17"> under review. &nbsp; </b> <br />
-              Adrian Andelin, Zane Doyle, Robyn Laing, Joseph Turecek, <b><span style="color: dimgray;">Baihan Lin</span></b>, and Jaime Olavarria. <br />
-              <p style="color:black"> Influence of Ocular Dominance Columns and Patchy Callosal Connections on Binocularity in Lateral Striate Cortex: Long Evans vs. Albino Rats. </p>
-              <!-- [<a href="" style="color:#3498db">arXiv</a>]&nbsp; -->
-              <!-- [<a href="./bibTex/andelin2019lack.txt"  style="color:#3498db">bibTex</a>]&nbsp; -->
-              <!-- [<a href=""  style="color:#3498db">code</a>]&nbsp; -->
-            </li>  <br />
-
-            <li>
-              <!-- <i class="fa-li fa fa-journal"></i> -->
-              [16]&nbsp;  <b class="text-primary" id="p16"> under review. &nbsp; </b> <br />
+              [19]&nbsp;  <b class="text-primary" id="p19"> under review. &nbsp; </b> <br />
               Mar Gonzalez-Franco, <b><span style="color: dimgray;">Baihan Lin</span></b>, Christopher Berger, and Jaron Lanier. <br />
               <p style="color:black"> Enhanced arm reach after a Pinocchio illusion in Virtual Reality. </p>
               <!-- [<a href="" style="color:#3498db">arXiv</a>]&nbsp; -->
@@ -317,6 +297,36 @@
 
           <h3> 2019 </h3> <br />
           <ul class="fa-ul mb-0">
+
+            <li>        
+              <!-- <i class="fa-li fa fa-conference"></i> -->
+              [18]&nbsp; <b class="text-primary" id="p18"> NIPS 2019 Workshop on Biological & Artificial RL (BARL). &nbsp; </b><br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish. <br />
+              <p style="color:black"> Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders. </p>
+              [<a href="https://arxiv.org/abs/1906.11286" style="color:#3498db">arXiv</a>]&nbsp;
+              [<a href="./bibTex/lin2019reinforce.txt"  style="color:#3498db">bibTex</a>]&nbsp;
+              <!-- [<a href="https://app.box.com/s/ttijx4zrpvkxhtdm5cwei3a7ccav4w4v"  style="color:#3498db">code</a>]&nbsp; -->
+            </li>  <br />
+
+            <li>        
+              <!-- <i class="fa-li fa fa-conference"></i> -->
+              [17]&nbsp; <b class="text-primary" id="p17"> NIPS 2019 Workshop on Learning Meaningful Representations of Life (LMRL). &nbsp; </b><br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>, Raul Rabadan, Nikolaus Kriegeskorte. <br />
+              <p style="color:black"> What About Higher-Order Cellular Complexity? An Inquiry with Topological Simplicial Analysis. </p>
+              <!-- [<a href="https://arxiv.org/abs/1906.11286" style="color:#3498db">arXiv</a>]&nbsp; -->
+              <!-- [<a href="./bibTex/lin2019what.txt"  style="color:#3498db">bibTex</a>]&nbsp; -->
+              <!-- [<a href="https://app.box.com/s/ttijx4zrpvkxhtdm5cwei3a7ccav4w4v"  style="color:#3498db">code</a>]&nbsp; -->
+            </li>  <br />
+
+            <li>
+              <!-- <i class="fa-li fa fa-journal"></i> -->
+              [16]&nbsp;  <b class="text-primary" id="p16"> Journal of Comparative Neurology. &nbsp; </b> <br />
+              Adrian Andelin, Zane Doyle, Robyn Laing, Joseph Turecek, <b><span style="color: dimgray;">Baihan Lin</span></b>, and Jaime Olavarria. <br />
+              <p style="color:black"> Influence of Ocular Dominance Columns and Patchy Callosal Connections on Binocularity in Lateral Striate Cortex: Long Evans vs. Albino Rats. </p>
+              <!-- [<a href="" style="color:#3498db">arXiv</a>]&nbsp; -->
+              [<a href="./bibTex/andelin2019lack.txt"  style="color:#3498db">bibTex</a>]&nbsp;
+              <!-- [<a href=""  style="color:#3498db">code</a>]&nbsp; -->
+            </li>  <br />
 
             <li>
               <!-- <i class="fa-li fa fa-conference"></i> -->
@@ -606,11 +616,11 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
       <div class="my-auto">
         <h2 class="mb-5">Interests</h2>
-        <p class="mb-5 text-primary">I am always curious about the world and I like exploring new things. Although New York Manhattan is a much more crowded and monochromatic place than the scenic Seattle Washington with all the natural beauty, I try to maintain my hobbies in skateboarding and longbaording (well, kayaking is obviously not gonna happen here). Beyond my footsteps, I enjoy traveling to different places (so far only 3 continents reached) - I am planning a roadtrip across Northern Europe some time soon.</p>
+        <p class="mb-5 text-primary">I am always curious about the world and I like exploring new things. Although New York Manhattan is a much more crowded and monochromatic place than the scenic Seattle Washington with all the natural beauty, I try to maintain my hobbies in skateboarding and longbaording (well, kayaking is obviously not gonna happen here easily). Beyond my footsteps, I enjoy traveling to different places (so far only 3 continents reached) - I am planning a roadtrip across Northern Europe some time soon.</p>
 
-        <p class="mb-5 text-primary">Despite doing many theoretical research, I like making tangible things: woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a <a href="https://www.instagram.com/p/BnnMfQcDjWI/?utm_source=ig_web_button_share_sheet"><u>modern sofa</u></a> (<a href="https://www.instagram.com/p/Bno19-ZjVSo/?utm_source=ig_web_button_share_sheet"><u>process</u></a>). </p>
+        <p class="mb-5 text-primary">Despite doing many theoretical research, I like making tangible things: woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a <a href="https://www.instagram.com/p/BnnMfQcDjWI/?utm_source=ig_web_button_share_sheet"><u>modern sofa</u></a> (<a href="https://www.instagram.com/p/Bno19-ZjVSo/?utm_source=ig_web_button_share_sheet"><u>process</u></a>). As another project under development, I am creating tangible representations of high-dimensional interaction data (more details yet to come). </p>
 
-        <p class="mb-5 text-primary">Other than these life bits, I play flute and am currently learning guitar, the Jazz-style, (at least while my neighbors and <a href="https://www.instagram.com/neptunesnaptime/"><u>my cats</u></a> can still bear it). </p>
+        <p class="mb-5 text-primary">Other than these life bits, I play flute and am currently learning guitar, the Jazz-style, (at least while my neighbors and <a href="https://www.instagram.com/neptunesnaptime/"><u>my cats</u></a> can still bear it). ;) </p>
 
       </div>
     </section>
