--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
             <tr><td>2018</td><td>now</td><td>Columbia University</td><td> Visual Inference Group, Kriegeskorte Lab </td><td><a href="#p9">[9]</a><a href="#p14">[14]</a><a href="#p17">[17]</a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span> </td></tr>
 
-            <tr><td>2018</td><td>now</td><td> </td><td> NeuroTheory Center, Qian Lab </td><td><a href="#p10">[10]</a><a href="#p12">[12]</a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td></tr>
+            <tr><td>2018</td><td>now</td><td> </td><td> NeuroTheory Center, Qian Lab </td><td><a href="#p10">[10]</a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td></tr>
 
             <tr><td>2018</td><td>2018</td><td> </td><td> Dept. of Systems Biol., Rabadan Lab </td><td><a href="#p13">[13]</a><a href="#p17">[17]</a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: purple;">GT</span> </td></tr>
 
