--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
               Adrian Andelin, Zane Doyle, Robyn Laing, Joseph Turecek, <b><span style="color: dimgray;">Baihan Lin</span></b>, and Jaime Olavarria. <br />
               <p style="color:black"> Influence of Ocular Dominance Columns and Patchy Callosal Connections on Binocularity in Lateral Striate Cortex: Long Evans vs. Albino Rats. </p>
               <!-- [<a href="" style="color:#3498db">arXiv</a>]&nbsp; -->
+              [<a href="./pdfs/andelin2019lack.pdf"  style="color:#3498db">pdf</a>]&nbsp;
               [<a href="./bibTex/andelin2019lack.txt"  style="color:#3498db">bibTex</a>]&nbsp;
               <!-- [<a href=""  style="color:#3498db">code</a>]&nbsp; -->
             </li>  <br />
