--- a/life.html
+++ b/life.html
@@ -54,7 +54,7 @@
 
       <ul class="list-inline list-social-icons mb-0 top-some">
             
-          <li class="list-inline-item">
+          <li class="list-adaptive-item">
             <a href="https://www.linkedin.com/in/doerlbh/">
               <span class="fa-stack fa-md">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -62,7 +62,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-adaptive-item">
             <a href="https://github.com/doerlbh">
               <span class="fa-stack fa-md">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -71,7 +71,7 @@
             </a>
           </li>
 
-          <li class="list-inline-item">
+          <li class="list-adaptive-item">
             <a href="https://www.instagram.com/doerlbh/">
               <span class="fa-stack fa-md">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -79,7 +79,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-adaptive-item">
               <a href="https://www.facebook.com/doerlbh">
                 <span class="fa-stack fa-md">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -88,7 +88,7 @@
               </a>
             </li>
           
-          <li class="list-inline-item">
+          <li class="list-adaptive-item">
               <a href="https://scholar.google.com/citations?user=H67KJ4cAAAAJ&hl=en">
                 <span class="fa-stack fa-md">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -97,7 +97,7 @@
               </a>
             </li>
 
-          <li class="list-inline-item">
+          <li class="list-adaptive-item">
             <a href="https://twitter.com/doerlbh">
               <span class="fa-stack fa-md">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -119,7 +119,7 @@
 
         <b class="text-primary"> I am always curious about the world and I like exploring new things. &nbsp; </b>
 
-        <p class="mb-5 text-primary"> <br>Although New York Manhattan is a much more crowded and monochromatic place than the scenic Seattle Washington with all the natural beauty, I try to maintain my hobbies in skateboarding and longbaording (well, kayaking is obviously not gonna happen here easily). Beyond my footsteps, I enjoy traveling to different places (so far only 3 continents reached) - I am planning a roadtrip across Northern Europe some time soon.</p>
+        <p class="mb-5 text-primary"> <br>Although New York is not like Seattle with all the Nature, I try to maintain my hobbies in skateboarding and longbaording (well, kayaking is obviously not gonna happen here easily). Beyond my footsteps, I enjoy traveling to different places (so far only 3 continents reached) - I am planning a roadtrip across Northern Europe some time next year. </p>
 
         <b class="text-primary"> Despite doing mostly theoretical research in recent days, I love making tangible things: &nbsp; </b>
 
