--- a/publications.html
+++ b/publications.html
@@ -48,7 +48,8 @@
 
 
       <ul class="list-inline list-social-icons mb-0  top-some">
-                      <li class="list-inline-item">
+
+            <li class="list-adaptive-item">
             <a href="https://www.linkedin.com/in/doerlbh/">
               <span class="fa-stack fa-md">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -56,7 +57,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-adaptive-item">
             <a href="https://github.com/doerlbh">
               <span class="fa-stack fa-md">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -64,7 +65,8 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+
+          <li class="list-adaptive-item">
             <a href="https://www.instagram.com/doerlbh/">
               <span class="fa-stack fa-md">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -72,7 +74,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-adaptive-item">
               <a href="https://www.facebook.com/doerlbh">
                 <span class="fa-stack fa-md">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -80,7 +82,8 @@
                 </span>
               </a>
             </li>
-          <li class="list-inline-item">
+          
+          <li class="list-adaptive-item">
               <a href="https://scholar.google.com/citations?user=H67KJ4cAAAAJ&hl=en">
                 <span class="fa-stack fa-md">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -88,7 +91,8 @@
                 </span>
               </a>
             </li>
-          <li class="list-inline-item">
+
+          <li class="list-adaptive-item">
             <a href="https://twitter.com/doerlbh">
               <span class="fa-stack fa-md">
                 <i class="fa fa-circle fa-stack-2x"></i>
