--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
               <div class="textcolumn"> 
               Yue Teng, Yuzhuo Wang, Xianglilan Zhang, Wenli Liu, Hang Fan, Hongwu Yao, <b><span style="color: dimgray;">Baihan Lin</span></b>, Ping Zhu, Wenjun Yuan, Yigang Tong and Wuchun Cao <br />
               <p style="color:black"> Scientific Reports </p>
-              [<a href="./pdfs/teng2015.txt" style="color:#3498db">pdf</a>]&nbsp;
+              [<a href="./pdfs/teng2015systematic.pdf" style="color:#3498db">pdf</a>]&nbsp;
               [<a href="./bibTex/teng2015systematic.txt"  style="color:#3498db">bibTex</a>]&nbsp;
             </div>
           </div>
