--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                     <p class="mb-5 text-primary">
                         I am a Ph.D. candidate at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> in Columbia University, co-advised by <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Nikolaus Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>. I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences. Most recently, I am developing neuroscience-inspired AI systems and applying ML to understand human brains (Neuro
-                        <-> AI). </p>
+                        &harr; AI). </p>
 
                     <p class="mb-5 text-primary">I graduated from the University of Washington, Seattle (UW), as part of the NIH-funded Computational Neuroscience Training Program, with B.S. in Applied & Computational Mathematics and B.A. in Psychology with Honors. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>.
                     </p>
