--- a/index.html
+++ b/index.html
@@ -757,15 +757,15 @@
 
         </div>
 
-        <!-- Bootstrap core JavaScript -->
-        <script src="vendor/jquery/jquery.min.js"></script>
-        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.js"></script>
 
-        <!-- Plugin JavaScript -->
-        <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.js"></script>
 
-        <!-- Custom scripts for this template -->
-        <script src="js/resume.min.js"></script>
+    <!-- Custom scripts for this template -->
+    <script src="js/resume.js"></script>
 
 </body>
 <!-- 
