--- a/test.html
+++ b/test.html
@@ -31,19 +31,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                    <a class="nav-link js-scroll-trigger" href="index.html#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#research">Research</a>
+                    <a class="nav-link js-scroll-trigger" href="index.html#research">Research</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
+                    <a class="nav-link js-scroll-trigger" href="index.html#publications">Publications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#life">Life</a>
+                    <a class="nav-link js-scroll-trigger" href="index.html#life">Life</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="bits">Bits</a>
+                    <a class="nav-link js-scroll-trigger" href="bits.html#bits">Bits</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#"></a>
