--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                 <p style="color:black"> NIPS 2019 Workshop on Biological & Artificial RL (BARL) </p>
                                 [<a href="https://arxiv.org/abs/1906.11286" style="color:#3498db">arXiv</a>]&nbsp; 
                                 [<a href="./bibTex/lin2019reinforce.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                [<a href="https://github.com/doerlbh/mentalRL" style="color:#3498db">code</a>]&nbsp;
+                                [<a href="https://github.com/doerlbh/mentalRL" style="color:#3498db">git</a>]&nbsp;
                             </div>
                         </div>
 
@@ -359,8 +359,8 @@
                                 <!-- [<a href="" style="color:#3498db">arXiv</a>]&nbsp; -->
                                 <!-- [<a href="./bibTex/lin2019reinforce.txt" style="color:#3498db">bibTex</a>]&nbsp; -->
                                 [arXiv to come]&nbsp;
-                                [bibTex to come]&nbsp;
-                                [<a href="https://github.com/doerlbh/graphTDA" style="color:#3498db">code</a>]&nbsp;
+                                [<a href="./bibTex/lin2019what.txt" style="color:#3498db">bibTex</a>]&nbsp;
+                                [<a href="https://github.com/doerlbh/scTSA" style="color:#3498db">git</a>]&nbsp;
                             </div>
                         </div>
 
@@ -382,7 +382,7 @@
                                 <p style="color:black"> Journal of Comparative Neurology </p>
                                 [<a href="./pdfs/andelin2019lack.pdf" style="color:#3498db">pdf</a>]&nbsp; 
                                 [<a href="./bibTex/andelin2019lack.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                [<a href="https://github.com/doerlbh/OLab_IntanEphys" style="color:#3498db">code</a>]&nbsp;
+                                [<a href="https://github.com/doerlbh/OLab_IntanEphys" style="color:#3498db">git</a>]&nbsp;
                             </div>
                         </div>
 
@@ -405,7 +405,7 @@
                                 <p style="color:black"> TIPS 2019 </p>
                                 [<a href="https://www.mcleanhospital.org/technology-psychiatry-summit" style="color:#3498db">link</a>]&nbsp; 
                                 [<a href="./bibTex/lin2019modeling.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                [<a href="https://github.com/doerlbh/mentalRL" style="color:#3498db">code</a>]&nbsp;
+                                [<a href="https://github.com/doerlbh/mentalRL" style="color:#3498db">git</a>]&nbsp;
                             </div>
                         </div>
                     </li>
@@ -428,7 +428,7 @@
                                 [<a href="https://arxiv.org/abs/1906.09264" style="color:#3498db">arXiv</a>]&nbsp; 
                                 [<a href="https://ccneuro.org/2019/Papers/ViewPapers.asp?PaperNum=1424" style="color:#3498db">link</a>]&nbsp; 
                                 [<a href="./bibTex/lin2019visualize.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                [<a href="https://github.com/rsagroup/pyrsa" style="color:#3498db">code</a>]&nbsp;
+                                [<a href="https://github.com/rsagroup/pyrsa" style="color:#3498db">git</a>]&nbsp;
                             </div>
                         </div>
                     </li>
@@ -452,7 +452,7 @@
                                 [<a href="./pdfs/ISMB_scTSA_poster.pdf" style="color:#3498db">poster</a>]&nbsp; 
                                 [<a href="https://www.iscb.org/cms_addon/conferences/ismbeccb2019/posters.php?track=BioVis%20COSI&session=A" style="color:#3498db">link</a>]&nbsp; 
                                 [<a href="./bibTex/lin2019cliques.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                [<a href="https://github.com/doerlbh/graphTDA" style="color:#3498db">code</a>]&nbsp;
+                                [<a href="https://github.com/doerlbh/scTSA" style="color:#3498db">git</a>]&nbsp;
                             </div>
                         </div>
                     </li>
@@ -472,7 +472,7 @@
                                 [<a href="./pdfs/chen2019self.pdf" style="color:#3498db">pdf</a>]&nbsp; 
                                 [<a href="https://pubs.acs.org/toc/jacsat/141/22" style="color:#3498db">JACS cover story</a>]&nbsp; 
                                 [<a href="./bibTex/chen2019self.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                [<a href="https://github.com/doerlbh?&tab=repositories&q=baker" style="color:#3498db">code</a>]&nbsp;
+                                [<a href="https://github.com/doerlbh?&tab=repositories&q=baker" style="color:#3498db">git</a>]&nbsp;
 
                             </div>
                         </div>
@@ -496,7 +496,7 @@
                                 [<a href="./pdfs/IJCAI_SQL_slides.pdf" style="color:#3498db">slides</a>]&nbsp; 
                                 [<a href="./pdfs/IJCAI_SQL_poster.pdf" style="color:#3498db">poster</a>]&nbsp; 
                                 [<a href="./bibTex/lin2019split.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                [<a href="https://github.com/doerlbh/mentalRL" style="color:#3498db">code</a>]&nbsp;
+                                [<a href="https://github.com/doerlbh/mentalRL" style="color:#3498db">git</a>]&nbsp;
                             </div>
                         </div>
                     </li>
@@ -518,10 +518,10 @@
                                 <p style="color:black"> IJCAI 2019 Workshop on Human Brain and Artificial Intelligence (HBAI) </p>
                                 [<a href="https://arxiv.org/abs/1902.10658" style="color:#3498db">arXiv</a>]&nbsp; 
                                 [<a href="./pdfs/IJCAI_RN_slides.pdf" style="color:#3498db">slides</a>]&nbsp; 
-                                [<a href="./pdfs/IJCAI_RN_poster.pdf" style="color:#3498db">poster</a>]&nbsp; 
-                                [<a href="./bibTex/lin2019neural.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                [<a href="https://app.box.com/s/ruycgz8p7rh30taj38d8dkc0h1ptltg1" style="color:#3498db">code</a>]&nbsp; 
+                                [<a href="./pdfs/IJCAI_RN_poster.pdf" style="color:#3498db">poster</a>]&nbsp;  
                                 [<a href="http://www.ijcai-hbai.org/" style="color:#3498db">link</a>]&nbsp; 
+                                [<a href="./bibTex/lin2019neural.txt" style="color:#3498db">bibTex</a>]&nbsp;
+                                [<a href="https://github.com/doerlbh/UnsupervisedAttentionMechanism" style="color:#3498db">git</a>]&nbsp;
                             </div>
                         </div>
 
@@ -550,8 +550,8 @@
                                 <p style="color:black"> arXiv </p>
                                 [<a href="https://arxiv.org/abs/1810.02923" style="color:#3498db">arXiv</a>]&nbsp; 
                                 [<a href="./bibTex/lin2018adgtic.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                <!-- [<a href="" style="color:#3498db">code</a>]&nbsp;  -->
-                                [code to come]
+                                <!-- [<a href="" style="color:#3498db">git</a>]&nbsp;  -->
+                                [git to come]
                             </div>
                         </div>
                     </li>
@@ -573,8 +573,8 @@
                                 <p style="color:black"> arXiv </p>
                                 [<a href="https://arxiv.org/abs/1802.00981" style="color:#3498db">arXiv</a>]&nbsp; 
                                 [<a href="./bibTex/lin2018adaptive.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                <!-- [<a href="" style="color:#3498db">code</a>]&nbsp;  -->
-                                [code to come]
+                                <!-- [<a href="" style="color:#3498db">git</a>]&nbsp;  -->
+                                [git to come]
                             </div>
                         </div>
                     </li>
@@ -596,8 +596,8 @@
                                 <p style="color:black"> IEEE ICDM 2018 Workshop on Data Science and Big Data Analytics (DSBDA) </p>
                                 [<a href="./pdfs/lin2018contextual.pdf" style="color:#3498db">pdf</a>]&nbsp; 
                                 [<a href="./bibTex/lin2018contextual.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                <!-- [<a href="" style="color:#3498db">code</a>]&nbsp;  -->
-                                [code to come]
+                                <!-- [<a href="" style="color:#3498db">git</a>]&nbsp;  -->
+                                [git to come]
                             </div>
                         </div>
                     </li>
@@ -625,7 +625,7 @@
                                 [<a href="https://arxiv.org/abs/1711.04078" style="color:#3498db">arXiv</a>]&nbsp; 
                                 [<a href="./pdfs/bukkittu2017parkinson_slides.pdf" style="color:#3498db">slides</a>]&nbsp; 
                                 [<a href="./bibTex/bukkittu2017parkinson.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                [<a href="https://github.com/doerlbh/DREAM_PDBiomarker" style="color:#3498db">code</a>]&nbsp;
+                                [<a href="https://github.com/doerlbh/DREAM_PDBiomarker" style="color:#3498db">git</a>]&nbsp;
                             </div>
                         </div>
                     </li>
@@ -646,7 +646,7 @@
                                 <p style="color:black"> PLoS One </p>
                                 [<a href="./pdfs/teng2017dynamic.pdf" style="color:#3498db">pdf</a>]&nbsp; 
                                 [<a href="./bibTex/teng2017dynamic.txt" style="color:#3498db">bibTex</a>]&nbsp;
-                                [code to come]&nbsp;
+                                [git to come]&nbsp;
                             </div>
                         </div>
                     </li>
@@ -715,7 +715,7 @@
                                 [<a href="./pdfs/NeuroFutures_ODC.pdf" style="color:#3498db">pdf</a>]&nbsp; 
                                 [<a href="https://alleninstitute.org/what-we-do/brain-science/events-training/neurofutures-2016/" style="color:#3498db">link</a>]&nbsp; 
                                 [<a href="./bibTex/lin2016odc.txt" style="color:#3498db">bibTex</a>]&nbsp; 
-                                [<a href="https://github.com/doerlbh/OLab_patch_processor_2.0" style="color:#3498db">code</a>]&nbsp;
+                                [<a href="https://github.com/doerlbh/OLab_patch_processor_2.0" style="color:#3498db">git</a>]&nbsp;
                             </div>
                         </div>
                     </li>
