[FEAT] add in project specific folders

--- a/bits/index.html
+++ b/bits/index.html
@@ -96,7 +96,7 @@
             </div>
         </nav>
         <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="projNav">
-            <h3 class="bottom-some"><a style="color:#ffffff;display:inline;text-align:left;text-transform:none" href="#project">some cool projects I do</a></h3>
+            <h3 class="bottom-some"><a style="color:#ffffff;display:inline;text-align:left;text-transform:none" href="../#project">some cool projects I do</a></h3>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -109,7 +109,7 @@
                         <a class="nav-link js-scroll-trigger" href="../proj/dynRSA"> dynamic RSA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../proj/scTSA">topology</a>
+                        <a class="nav-link js-scroll-trigger" href="../proj/topology">topology</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="../proj/neuralMDL">neural MDL</a>
@@ -118,7 +118,7 @@
                         <a class="nav-link js-scroll-trigger" href="../proj/tensegrity">tensegrity</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../proj/selfassembly">protein design</a>
+                        <a class="nav-link js-scroll-trigger" href="../proj/proteindesign">protein design</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="../proj/pinocchio"> pinocchio VR</a>
