--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <a class="nav-link js-scroll-trigger" href="proj/dynRSA"> dynamic RSA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="proj/scTSA">topology</a>
+                        <a class="nav-link js-scroll-trigger" href="proj/topology">topology</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="proj/neuralMDL">neural MDL</a>
@@ -118,7 +118,7 @@
                         <a class="nav-link js-scroll-trigger" href="proj/tensegrity">tensegrity</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="proj/selfassembly">protein design</a>
+                        <a class="nav-link js-scroll-trigger" href="proj/proteindesign">protein design</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="proj/pinocchio"> pinocchio VR</a>
