--- a/bits/index.html
+++ b/bits/index.html
@@ -9,8 +9,8 @@
         <meta name="author" content="Baihan Lin">
         <title>Baihan Lin</title>
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link href="../css/bootstrap.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">  <link href="../css/bootstrap.css" rel="stylesheet">
         <link href="../css/resume.css" rel="stylesheet">
         <link href="../css/font-awesome.css" rel="stylesheet">
         <link href="../css/devicons.css" rel="stylesheet">
