--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <meta name="author" content="Baihan Lin">
         <title>Baihan Lin</title>
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
         <link href="css/bootstrap.css" rel="stylesheet">
         <link href="css/resume.css" rel="stylesheet">
         <link href="css/font-awesome.css" rel="stylesheet">
@@ -163,7 +164,7 @@
                 </p>
 
                 <p class="mb-5 text-primary">
-                    I am into <br/>
+                    I am into: <br/>
                     <span class="field">
                         <img src="./img/fields/brain.png" alt="" style="width:80%"><br/>
                         brain
