--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <meta name="author" content="Baihan Lin">
         <title>Baihan Lin</title>
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
         <link href="css/bootstrap.css" rel="stylesheet">
@@ -40,9 +42,7 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="bits">Bits</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#"></a>
-                    </li>
+                    <li><span class="nav-link js-scroll-trigger"></span><br/><br/></li>
                     <ul class="list-inline list-social-icons mb-0 top-some">
                         <li class="list-adaptive-item">
                             <a href="https://www.linkedin.com/in/doerlbh/">
@@ -93,6 +93,9 @@
                             </a>
                         </li>
                     </ul>
+                    <li class="nav-item will-gone">
+                        <span class="nav-link js-scroll-trigger"> &#x21E7;<br/>see me at</span>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -131,7 +134,7 @@
                         <a class="nav-link js-scroll-trigger" href="proj/patch"> quanti patch </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#"></a>
+                        <span class="nav-link js-scroll-trigger"></span>
                     </li>
                 </ul>
             </div>
@@ -704,7 +707,7 @@
         <br> woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a <a href="https://www.instagram.com/p/BnnMfQcDjWI/?utm_source=ig_web_button_share_sheet"><u>modern sofa</u></a> (<a href="https://www.instagram.com/p/Bno19-ZjVSo/?utm_source=ig_web_button_share_sheet"><u>process</u></a>). As another project under development, I am creating tangible representations of high-dimensional interaction data (more details yet to come). </p>
         <b class="text-primary"> Music! &nbsp; </b>
         <p class="mb-5 text-primary">
-        <br> Other than these life bits, I play flute and am currently learning Jazz and guitar (at least while my neighbors and <a href="https://www.instagram.com/neptunesnaptime/"><u>my cats</u></a> can still bear it). ;) </p>
+        <br> Other than these life bits, I play flute and am currently learning Jazz and guitar, well, at least while my neighbors and <a href="https://www.instagram.com/neptunesnaptime/"><u>my cats</u></a> can still bear it. ;) </p>
         <p class="mb-5 text-primary">
         <br> More bits of life can be found <a href="bits.html"><u><b>here</b></u></a></p>
         </div>
