--- a/proj/mentalRL/index.html
+++ b/proj/mentalRL/index.html
@@ -7,6 +7,8 @@
         <meta name="author" content="Baihan Lin">
         <title>Baihan Lin</title>
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
         <link href="../../css/bootstrap.css" rel="stylesheet">
@@ -38,9 +40,7 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="../../bits">Bits</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#"></a>
-                    </li>
+                    <li><span class="nav-link js-scroll-trigger"></span><br/><br/></li>
                     <ul class="list-inline list-social-icons mb-0 top-some">
                         <li class="list-adaptive-item">
                             <a href="https://www.linkedin.com/in/doerlbh/">
@@ -91,7 +91,10 @@
                             </a>
                         </li>
                     </ul>
-                </ul>
+                    <li class="nav-item will-gone">
+                        <span class="nav-link js-scroll-trigger"> &#x21E7;<br/>see me at</span>
+                    </li>
+                    </ul>
             </div>
         </nav>
         <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="projNav">
@@ -129,7 +132,7 @@
                         <a class="nav-link js-scroll-trigger" href="../patch"> quanti patch </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#"></a>
+                        <span class="nav-link js-scroll-trigger"></span>
                     </li>
                 </ul>
             </div>
