--- a/proj/mentalRL/index.html
+++ b/proj/mentalRL/index.html
@@ -40,7 +40,7 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="../../bits">Bits</a>
                     </li>
-                    <li><span class="nav-link js-scroll-trigger"></span><br/><br/></li>
+                    <li><span class="nav-link js-scroll-trigger will-gone"><br/><br/></span></li>
                     <ul class="list-inline list-social-icons mb-0 top-some">
                         <li class="list-adaptive-item">
                             <a href="https://www.linkedin.com/in/doerlbh/">
