[FEAT] add country in travel bits

--- a/bits/index.html
+++ b/bits/index.html
@@ -144,7 +144,28 @@
                     <h2 class="mb-5">Life is a journey</h2>
                     <b class="text-primary"> Always on my way~ &nbsp; </b>
                     <p class="mb-5 text-primary">
-                        <br> Cites I have been to: Shenzhen, Nanjing, Beijing, Hong Kong, Zhanjiang, Zhuhai, Frankfurt, Bonn, Prague, Munich, Vienna, Salzburg, Zurich, Lucerne, Suzhou, Wuxi, Wuhan, San Francisco, Sacramento, Mountain View, Davis, Seattle, Bellevue, Boston, New York City, Providence, Newport, Winthrop, New Haven, Chicago, Houston, Durham, Pittsburg, Berkeley, Tacoma, Olympia, Los Angeles, Yorktown, Jersey City, Paramus, Montreal, Ottawa, Quebec City, Basel, St. Louis, Heidelberg, Geneva, Bern, Lausanne, Jungfrau, Interlaken, Berlin, Macau, Toronto, Blue Moutain...
+                        <br> Cites I have been to: 
+
+<b style="color: red;">[&nbsp;China&nbsp;]</b> Shenzhen, Nanjing, Beijing, Hong Kong, Zhanjiang, Zhuhai, Suzhou, Wuxi, Wuhan, Macau; 
+
+<b style="color: blue;"> [&nbsp;USA&nbsp;]</b>
+San Francisco, Sacramento, Mountainview, Davis, Seattle, Bellevue, Boston, New York City, Providence, Newport, Winthrop, New Haven, Chicago, Houston, Durham, Pittsburg, Berkeley, Tacoma, Olympia, Los Angeles, Yorktown, Jersey City, Paramus;
+
+<b style="color: orange;"> [&nbsp;Germany&nbsp;]</b> Frankfurt, Bonn, Munich, Heidelberg, Berlin; 
+
+<b style="color: forestgreen;"> [&nbsp;Czech&nbsp;]</b> Prague; 
+
+<b style="color: brown;"> [&nbsp;Austria&nbsp;]</b> Vienna, Salzburg; 
+
+<b style="color: teal;"> [&nbsp;Switzerland&nbsp;]</b> Zurich, Lucerne, Basel, Geneva, Bern, Lausanne, Jungfrau, Interlaken; 
+
+<b style="color: salmon;"> [&nbsp;Canada&nbsp;] </b>
+Montreal, Ottawa, Quebec City, Toronto, Blue Moutain, Vancouver;
+
+<b style="color: purple;"> [&nbsp;France&nbsp;]</b>
+St. Louis, Paris...
+
+                <!-- Shenzhen, Nanjing, Beijing, Hong Kong, Zhanjiang, Zhuhai, Frankfurt, Bonn, Prague, Munich, Vienna, Salzburg, Zurich, Lucerne, Suzhou, Wuxi, Wuhan, San Francisco, Sacramento, Mountain View, Davis, Seattle, Bellevue, Boston, New York City, Providence, Newport, Winthrop, New Haven, Chicago, Houston, Durham, Pittsburg, Berkeley, Tacoma, Olympia, Los Angeles, Yorktown, Jersey City, Paramus, Montreal, Ottawa, Quebec City, Basel, St. Louis, Heidelberg, Geneva, Bern, Lausanne, Jungfrau, Interlaken, Berlin, Macau, Toronto, Blue Moutain... -->
                         <br>
                     </p>
                     <div class="photorow">
