[FEAT] include under review manuscript

--- a/index.html
+++ b/index.html
@@ -326,10 +326,35 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
         <div class="my-auto">
         <h2 class="mb-5">Publications</h2>
-        <p class="mb-5 text-primary"> <b>19</b> total = <b>10</b> conferences + <b>6</b> journals + <b>3</b> manuscript / arXiv preprints &nbsp; </p>
+        <p class="mb-5 text-primary"> <b>20</b> total = <b>10</b> conferences + <b>6</b> journals + <b>4</b> manuscript / arXiv preprints &nbsp; </p>
         <h3> ongoing...</h3>
         <br />
         <ul class="fa-ul mb-0">
+        <li>
+        <div class="row">
+        <div class="imgcolumn">
+        <img src="./img/publications/lin2019unsupervised.png" alt="lin2019reinforce" border="1" style="width:100%">
+        </div>
+        <div class="textcolumn">
+        [20]&nbsp;<b class="text-primary" id="p18"> Unsupervised Attention Mechanism across Neural Network Layers &nbsp; </b>
+        <br />
+        <b><span style="color: dimgray;">Baihan Lin</span></b>
+        <br />
+        <p style="color:black"> under review </p>
+        [
+        arXiv to come
+        ]&nbsp; [
+        <a href="https://github.com/doerlbh/UnsupervisedAttentionMechanism" style="color:#3498db">code</a>
+        ]&nbsp; [
+        <a class="collapsible" style="color:#3498db">abstract&nbsp;</a>
+        ]
+        <div class="abstract">
+            <p>  Inspired by the adaptation phenomenon of neuronal firing, we propose an unsupervised attention mechanism (UAM) which computes the statistical regularity in the implicit space of neural networks under the Minimum Description Length (MDL) principle. Treating the neural network optimization process as a partially observable model selection problem, UAM constrained the implicit space by a normalization factor, the universal code length. We compute this universal code incrementally across neural network layers and demonstrated the flexibility to include data priors such as top-down attention and other oracle information. Empirically, our approach outperforms existing normalization methods in tackling limited, imbalanced and nonstationary input distribution in computer vision and reinforcement learning tasks. Lastly, UAM tracks dependency and critical learning stages across layers and recurrent time steps of deep networks. </p>
+        </div>
+        </div>
+        </div>
+        </li>
+        <br />
         <li>
         <div class="row">
         <div class="imgcolumn">
@@ -337,9 +362,15 @@
         </div>
         <div class="textcolumn">
         [19]&nbsp; <b class="text-primary" id="p19"> Enhanced arm reach after a Pinocchio illusion in Virtual Reality &nbsp; </b>
-        <br /> Mar Gonzalez-Franco, <b><span style="color: dimgray;">Baihan Lin</span></b>, Christopher Berger, and Jaron Lanier
+        <br /> Mar Gonzalez-Franco, Christopher Berger, <b><span style="color: dimgray;">Baihan Lin</span></b>, and Jaron Lanier
         <br />
         <p style="color:black"> manuscript in preparation </p>
+        [
+        <a class="collapsible" style="color:#3498db">abstract&nbsp;</a>
+        ]
+        <div class="abstract">
+            <p> Perceived extension of the reach of one’s arm was observed in healthy humans after eliciting a Pinocchio Illusion—whereby a participant’s nose is illusorily elongated—in Virtual Reality. Self-administered tapping on the tip of the nose of the participants’ virtual avatar (using a hand-held controller) while the nose of the avatar slowly grew, produced a Pinocchio illusion an implicit outward drift in the participants’ arm, and the elongation of the perceived reach of their arm. We found a positive correlation between the extent of the implicit outward drift of the participants arm and the perceived reachability of distal objects. These results were found, both when the participants’ real nose was stimulated and when it was not. These findings are discussed in the context of theories on body schema and ownership, and open new avenues for hand grasp interaction with virtual objects out of arm’s-reach inside immersive setups. </p>
+        </div>
         </div>
         </div>
         </li>
